Imagination Media correcoes e Instalação RicardoMartins_PagSeguro

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "magento/module-wishlist-sample-data": "100.4.*",
         "magento/product-community-edition": "2.4.0",
         "magento/sample-data-media": "100.4.*",
-        "rafaelstz/traducao_magento2_pt_br": "dev-master"
+        "rafaelstz/traducao_magento2_pt_br": "dev-master",
+        "ricardomartins/pagseguro": "^2.4"
     },
     "require-dev": {
         "allure-framework/allure-phpunit": "~1.2.0",
