--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "magento/module-wishlist-sample-data": "100.4.*",
         "magento/product-community-edition": "2.4.0",
         "magento/sample-data-media": "100.4.*",
+        "mageplaza/module-smtp": "^1.4",
         "rafaelstz/traducao_magento2_pt_br": "dev-master",
         "ricardomartins/pagseguro": "^2.4"
     },
