--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 # Mark Shust's Docker Configuration for Magento
 # (https://github.com/markshust/docker-magento)
 #
-# Version 33.0.0
+# Version 34.2.0
 
 version: "3"
 
 services:
   app:
-    image: markoshust/magento-nginx:1.18-2
+    image: markoshust/magento-nginx:1.18-4
     ports:
       - "80:8000"
       - "443:8443"
@@ -21,13 +21,14 @@ services:
       - ssldata:/etc/nginx/certs
 
   phpfpm:
-    image: markoshust/magento-php:7.4-fpm-0
+    image: markoshust/magento-php:7.4-fpm-2
     links:
       - db
     volumes: *appvolumes
 
   db:
     image: percona:5.7
+    command: --max_allowed_packet=64M
     ports:
       - "3306:3306"
     env_file: env/db.env
@@ -35,7 +36,7 @@ services:
       - dbdata:/var/lib/mysql
 
   redis:
-    image: redis:5.0
+    image: redis:5.0-alpine
 
   elasticsearch:
     image: markoshust/magento-elasticsearch:7.6.2-2
@@ -46,7 +47,7 @@ services:
       - "discovery.type=single-node"
 
   rabbitmq:
-    image: rabbitmq:3.7-management
+    image: rabbitmq:3.7-management-alpine
     ports:
       - "15672:15672"
       - "5672:5672"
@@ -55,7 +56,7 @@ services:
 
   # Disabling cron by default as it uses higher CPU, enable if needed
   #cron:
-  #  image: markoshust/magento-php:7.4-fpm-0
+  #  image: markoshust/magento-php:7.4-fpm-2
   #  user: root
   #  command: /usr/local/bin/cronstart
   #  tty: true
