--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 # Mark Shust's Docker Configuration for Magento
 # (https://github.com/markshust/docker-magento)
 #
-# Version 36.0.1
+# Version 37.0.2
 
 version: "3"
 
@@ -22,7 +22,7 @@ services:
       #- ./src/var/report:/var/www/html/var/report:cached
       # To sync your SSH to the container, uncomment the following line:
       #- ~/.ssh/id_rsa:/var/www/.ssh/id_rsa:cached
-      # Linux only: remove the above lines and mount the entire src directory with:
+      # Linux only: remove the above lines (except nginx.conf line) and mount the entire src directory with:
       #- ./src:/var/www/html:cached
 
   phpfpm:
