--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,14 +1,9 @@
-# Mark Shust's Docker Configuration for Magento
-# (https://github.com/markshust/docker-magento)
-#
-# Version 37.0.2
-
 version: "3"
 
 services:
   app:
     volumes: &appvolumes
-      # Host mounts with performance penalty, only put what is necessary here
+      ## Host mounts with performance penalty, only put what is necessary here
       - ./src/app/code:/var/www/html/app/code:cached
       - ./src/app/design:/var/www/html/app/design:cached
       - ./src/app/etc:/var/www/html/app/etc:cached
@@ -20,26 +15,13 @@ services:
       #- ./src/patches:/var/www/html/patches:cached
       #- ./src/var/log:/var/www/html/var/log:cached
       #- ./src/var/report:/var/www/html/var/report:cached
-      # To sync your SSH to the container, uncomment the following line:
-      #- ~/.ssh/id_rsa:/var/www/.ssh/id_rsa:cached
-      # Linux only: remove the above lines (except nginx.conf line) and mount the entire src directory with:
-      #- ./src:/var/www/html:cached
 
   phpfpm:
     volumes: *appvolumes
     environment:
-      PHP_IDE_CONFIG: "serverName=ShustDocker"
+      PHP_IDE_CONFIG: "serverName=ShustDocker"    
+    
     # Linux only: host.docker.internal doesn't exist https://github.com/docker/for-linux/issues/264
     # Uncomment two lines below & replace IP with result of: docker run --rm alpine ip route | awk 'NR==1 {print $3}'
     #extra_hosts:
     #  - "host.docker.internal:IP"
-
-  mailhog:
-    image: mailhog/mailhog
-    ports:
-      - "1025"
-      - "8025:8025"
-
-  # Disabling cron by default as it uses higher CPU, enable if needed
-  #cron:
-  #  volumes: *appvolumes
