--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,69 +1,105 @@
-# Mark Shust's Docker Configuration for Magento
-# (https://github.com/markshust/docker-magento)
-#
-# Version 37.0.2
+## Mark Shust's Docker Configuration for Magento
+## (https://github.com/markshust/docker-magento)
+##
+## Version 42.0.0
+
+## To use SSH, see https://github.com/markshust/docker-magento#ssh
+## Linux users, see https://github.com/markshust/docker-magento#linux
+
+## If you changed the default Docker network, you may need to replace
+## 172.17.0.1 in this file with the result of:
+## docker network inspect bridge --format='{{(index .IPAM.Config 0).Gateway}}'
 
 version: "3"
 
 services:
   app:
-    image: markoshust/magento-nginx:1.18-4
+    image: markoshust/magento-nginx:1.18-7
     ports:
       - "80:8000"
       - "443:8443"
-    links:
-      - db
-      - phpfpm
     volumes: &appvolumes
       - ~/.composer:/var/www/.composer:cached
       - appdata:/var/www/html
       - sockdata:/sock
       - ssldata:/etc/nginx/certs
+    extra_hosts: &appextrahosts
+      ## M1 Mac support to fix Docker delay, see #566
+      - "app:172.17.0.1"
+      - "phpfpm:172.17.0.1"
+#      - "db:172.17.0.1"
+      - "redis:172.17.0.1"
+      - "elasticsearch:172.17.0.1"
+      - "rabbitmq:172.17.0.1"
+      ## Selenium support, replace "magento.test" with URL of your site
+      - "firestore.test:172.17.0.1"
 
   phpfpm:
-    image: markoshust/magento-php:7.4-fpm-5
-    links:
-      - db
+    image: markoshust/magento-php:8.1-fpm-0
     volumes: *appvolumes
+    extra_hosts: *appextrahosts
+    env_file: env/phpfpm.env
 
   db:
-    image: percona:5.7
+    image: mariadb:10.4
     command: --max_allowed_packet=64M
     ports:
-      - "3306:3306"
+      - "3307:3306"
     env_file: env/db.env
     volumes:
       - dbdata:/var/lib/mysql
+    extra_hosts: *appextrahosts
 
   redis:
-    image: redis:6.0.10-alpine3.13 #originally redis:5.0-alpine
+    image: redis:6.2-alpine
+    ports:
+      - "6379:6379"
+    extra_hosts: *appextrahosts
 
   elasticsearch:
-    image: markoshust/magento-elasticsearch:7.7.1-0
+    image: markoshust/magento-elasticsearch:7.16-0
     ports:
       - "9200:9200"
       - "9300:9300"
     environment:
       - "discovery.type=single-node"
+      ## Set custom heap size to avoid memory errors
       - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+      ## Avoid test failures due to small disks
+      ## More info at https://github.com/markshust/docker-magento/issues/488
+      - "cluster.routing.allocation.disk.threshold_enabled=false"
+      - "index.blocks.read_only_allow_delete"
+    extra_hosts: *appextrahosts
 
   rabbitmq:
-    image: rabbitmq:3.7-management-alpine
+    image: markoshust/magento-rabbitmq:3.9-0
     ports:
       - "15672:15672"
       - "5672:5672"
     volumes:
       - rabbitmqdata:/var/lib/rabbitmq
+    env_file: env/rabbitmq.env
+    extra_hosts: *appextrahosts
 
-  # Disabling cron by default as it uses higher CPU, enable if needed
-  #cron:
-  #  image: markoshust/magento-php:7.4-fpm-5
-  #  user: root
-  #  command: /usr/local/bin/cronstart
-  #  tty: true
-  #  links:
-  #    - db
-  #  volumes: *appvolumes
+  mailcatcher:
+    image: sj26/mailcatcher
+    ports:
+      - "1080:1080"
+    extra_hosts: *appextrahosts
+
+  ## Blackfire support, uncomment to enable
+  #blackfire:
+  #  image: blackfire/blackfire:2
+  #  ports:
+  #    - "8307"
+  #  env_file: env/blackfire.env
+
+  ## Selenium support, uncomment to enable
+  #selenium:
+  #  image: selenium/standalone-chrome-debug:3.8.1
+  #  ports:
+  #    - "5900:5900"
+  #  extra_hosts: *appextrahosts
 
 volumes:
   appdata:
